# cs178Final

./: .gitignore  README.md  pyproject.toml  test.ipynb  wine_data.ipynb  winelight.ipynb
notebooks/: NN.ipynb  NN_binary.ipynb  autogluon.ipynb  confusion.ipynb  cs178_winter26_hw2-1.ipynb  ensemble.ipynb  knn.ipynb  logistic.ipynb  randomforest.ipynb  split.ipynb  utils.py  wine.ipynb  winelight.ipynb
